refactor(skill): harden bundled-skill DB sync and extend self-heal